# alumni-feup

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  commitlint.config.js  docker-compose-dev.yml  package-lock.json  package.json  pnpm-lock.yaml  pr_comments.json  pr_comments.txt  swagger-spec.json
agents-api/: .env.example  .gitignore  README.md  main.py  nixpacks.toml  pyproject.toml  railpack.json  railway.toml
agents-api/app/: __init__.py  main.py
agents-api/app/agents/: __init__.py  esco_classifier.py  job_classification.py  location.py  seniority.py
agents-api/app/api/: routes.py
agents-api/app/api/endpoints/: company.py  esco.py  job_classification.py  linkedin.py  location.py  role.py  seniority.py  storage.py
agents-api/app/core/: __init__.py  config.py  middlewares.py  service_manager.py
agents-api/app/db/: __init__.py  models.py  session.py
agents-api/app/schemas/: company.py  image.py  job_classification.py  linkedin.py  location.py  role.py  seniority.py
agents-api/app/services/: company.py  coordinates.py  image_storage.py  job_classification.py  linkedin.py  location.py  role.py  seniority.py
agents-api/app/utils/: alumni_db.py  company_db.py  consts.py  db.py  embeddings.py  esco_db.py  http_client.py  industry_db.py  location_db.py  mappings.py  pipeline_timeout.py  prompts.py  rate_limiter.py  role_db.py
agents-api/app/utils/agents/: esco_reference.py
agents-api/app/utils/misc/: string.py  (+1 more)
agents-api/docs/: agent_workflow.md
agents-api/docs/prompts/: job_classification.md
agents-api/scripts/: prefetch_models.py
(+1000 files in other folders)
