[project]
name = "agents-api"
version = "0.1.0"
description = "API service for job title classification and LinkedIn data extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.0",
    "langchain>=0.1.10",
    "langchain-community>=0.1.10",
    "langchain-core>=0.1.10",
    "langchain-ollama>=0.0.1",
    "langchain-experimental>=0.0.51",
    "langgraph>=0.0.20",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "openapi-generator-cli>=7.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "pytest>=7.4.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]
